# autopilot-expert-export-replit

./: .replit  .replit_mcp_server  ATLASSIAN_MCP_SETUP_GUIDE.md  DEPLOYMENT_TRIGGER.md  careful_embedding_process.py  celery_app.py  celerybeat-schedule  channel_embedding_state.json  check_bot_membership.py  check_embedding_results.py  config.py  continue_first_gen_ingestion.py  debug_celery_beat.py  debug_confluence_urls.py  debug_database_structure.py  debug_embedding.py  debug_gemini_flash.py  debug_json_leakage.py  debug_json_leakage_simple.py  debug_json_response_issue.py  debug_mcp_deployment.py  debug_mcp_direct_connection.py  debug_mcp_execution.py  debug_mcp_parameter_mapping.py  debug_notion_config.py  debug_orchestrator.py  debug_orchestrator_flow.py  debug_orchestrator_output.py  debug_pinecone.py  debug_private_channel_access.py  debug_production_issue.py  debug_production_mcp_deployment.py  debug_slack_error.py  debug_slack_permissions.py  debug_state_stack_content.py  debug_vector_search.py  debug_webhook_structure.py  demo_enhanced_client_agent.py  demonstrate_enhanced_system.py  deployment_diagnosis.py  (+212 more)
agents/: atlassian_guru.py  client_agent.py  client_agent_enhanced.py  client_agent_old.py  observer_agent.py  orchestrator_agent.py  slack_gateway.py
attached_assets/: Pasted--Scenario-1-Slack-user-in-a-DM-to-the-Autopilot-Expert-I-m-trying-to-find-the-latest-updat-1751050663595_1751050663596.txt  Pasted-06-29-19-10-58-2025-06-29-16-10-58-159-main-INFO-STEP-3A-Framework-routing-start-at-17-1751213499176_1751213499176.txt  prompts_1751056071520.yaml  (+9 more)
autopilot_expert_multi_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
(+67 files in other folders)
